overflow fixed

--- a/Assets/main.css
+++ b/Assets/main.css
@@ -53,9 +53,9 @@ body {
     color: #333;
     overflow-x: hidden;
 }
+
 img, div, section {
   max-width: 100%;
-  overflow: hidden;
 }
 /*home page header style*/
 .custom-header {
@@ -411,6 +411,10 @@ img, div, section {
 .nav-links .dropdown-content .dropdown .dropdown-content {
   top: 100%;
   left: 0;
+}
+img, div, section {
+  max-width: 100%;
+  overflow: hidden;
 }
 }
 
